testsuite/tests/driver/T11381.stderr

T11381.hs:7:23: error: [GHC-43991]
    • Illegal injectivity annotation
    • In the type family declaration for ‘F’
    Suggested fix:
      Perhaps you intended to use the ‘TypeFamilyDependencies’ extension
